Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Melanie Conroy's digital humanities projects by mrconroy</title>
+    <title>Melanie Conroy - Digital Humanities Projects by mrconroy</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -28,25 +28,32 @@
 
       <section>
         <div id="title">
-          <h1>Melanie Conroy's digital humanities projects</h1>
+          <h1>Melanie Conroy - Digital Humanities Projects</h1>
           <p>At the Humanities + Design Lab (CESTA), Stanford University</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/mrconroy">mrconroy</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
         </div>
 
-        <p>***Melanie Conroy
-Thinking Matters
+        <h3>Melanie Conroy</h3>
+
+<p>Thinking Matters
 Stanford University</p>
 
-<p>**<a href="http://www.stanford.edu/group/humdesignlit/cgi-bin/mappingbalzac/">Mapping Balzac</a>: 
-The Mapping Balzac project is an online companion to Balzac’s great roman fleuve La Comédie Humaine. Mapping Balzac is a complete repertory of the characters in Balzac’s foundational series of realist novels, the places mentioned and visited, and the notable events within the novels. These references will be linked to full text of the complete Comédie Humaine in the ARTFL-FRANTEXTdatabase. There are several kinds of information in the database: information on characters, places mentioned or visited, events in the novels, and types of relationships (networks).</p>
+<h2>
+<a href="http://www.stanford.edu/group/humdesignlit/cgi-bin/mappingbalzac/">Mapping Balzac</a>:</h2>
 
-<p>**<a href="http://republicofletters.stanford.edu/case-study/the-salons-project/">The Salons Project</a> (Part of <a href="http://republicofletters.stanford.edu/">Mapping the Republic of Letters</a>):
-The Salons Project maps the intellectual and social geography of European salons from the seventeenth century to the early twentieth century. Beginning with Parisian salons in the period from 1700-1914, the project graphs the social networks of leading salonnières, charting the movement of notable intellectuals, writers, politicians, and socialites between salons, as well as the evolution of individual salons as loci for intellectual and literary exchange.</p>
+<p>The Mapping Balzac project is an online companion to Balzac’s great roman fleuve La Comédie Humaine. Mapping Balzac is a complete repertory of the characters in Balzac’s foundational series of realist novels, the places mentioned and visited, and the notable events within the novels. These references will be linked to full text of the complete Comédie Humaine in the ARTFL-FRANTEXTdatabase. There are several kinds of information in the database: information on characters, places mentioned or visited, events in the novels, and types of relationships (networks).</p>
 
-<p>**<a href="http://www.stanford.edu/group/humdesignlit/cgi-bin/19thcenturynetworks/">19th-Century Networks</a>: 
-19-Century Networks  is a database of important social links in nineteenth-century Europe, including academic affiliations, salons, literary movements, political affiliations, and military affiliations. It aims to characterize exchange between people in literary, cultural, political, and other networks.</p>
+<h2>
+<a href="http://republicofletters.stanford.edu/case-study/the-salons-project/">The Salons Project</a> (Part of <a href="http://republicofletters.stanford.edu/">Mapping the Republic of Letters</a>):</h2>
+
+<p>The Salons Project maps the intellectual and social geography of European salons from the seventeenth century to the early twentieth century. Beginning with Parisian salons in the period from 1700-1914, the project graphs the social networks of leading salonnières, charting the movement of notable intellectuals, writers, politicians, and socialites between salons, as well as the evolution of individual salons as loci for intellectual and literary exchange.</p>
+
+<h2>
+<a href="http://www.stanford.edu/group/humdesignlit/cgi-bin/19thcenturynetworks/">19th-Century Networks</a>:</h2>
+
+<p>19-Century Networks  is a database of important social links in nineteenth-century Europe, including academic affiliations, salons, literary movements, political affiliations, and military affiliations. It aims to characterize exchange between people in literary, cultural, political, and other networks.</p>
       </section>
 
     </div>
